<resources>
    <string name="app_name">My ACNH</string>

    <string name="action_info">App Info</string>
    <string name="action_donate">Donate!</string>

    <string name="title">My ACNH</string>
    <string name="info_title">Application Info</string>
    <string name="info_testmac_title">Test Machine</string>
    <string name="main_islandinfo_maintitle">Island Info</string>
    <string name="main_islandinfo_btn">Open Screenshot Screen</string>
    <string name="main_islandinfo_namehint">Edit your inland name!</string>
    <string name="main_islandinfo_addresstitle">Island Address</string>
    <string name="main_islandinfo_fruittitle">Island Fruit</string>
    <string name="main_islandinfo_resititle">Player Name</string>
    <string name="main_islandinfo_resihint">Edit yout player name!</string>
    <string name="main_islandresident_title">Residents\' Info</string>
    <string name="main_islandresident_hint">Any residents are selected.\nPlease add your island residents!</string>
    <string name="main_islandevent_update">Last Update: Mar 06, 2020 (Based on ACNL)</string>
    <string name="main_islandevent_standard">North American Standard</string>
    <string name="info_updates">
        v.1.14 Updates\n - 도감 관리 기능 업데이트!\n\t물고기, 곤충, 화석의 도감 현황을 저장하세요!\n - 무주식 도우미 분석 탐색범위 확대\n - 번역 누락사항 수정\n\n
        v.1.13 Updates\n - Turnip Helper Update!\n\tSave and Analysis Turnip values!\n - Fixing minor resolution bugs\n - Requires storage access for island image change.\n\n
        v.1.12 Updates\n - Fixing resolution bugs\n - Change app font!\n\n
        v.1.11 Updates\n - Add 206 Villagers (190~395)\' Data\n - Re-design Edit Residents\' Info card\n - Optimize memory usage\n\n
        v.1.10 Updates\n - Release\n\n
        v.1.01 - 09 Updates\n - Uploading internal test track, test\n\n
        v.1.00 Updates\n - Development testing version</string>
    <string name="info_creator_title">Developer</string>
    <string name="info_appver_title">App. Version</string>
    <string name="info_creinv_title">Dev. Invironment</string>
    <string name="main_islandinfo_nametitle">Island Name</string>
    <string name="main_islandinfo_addresshint">Edit your island address!</string>
    <string name="main_islandinfo_fruithint">Edit yout island fruit!</string>
    <string name="donate_title">Donate!</string>
    <string name="donate_text1">Do you like My ACNH?</string>
    <string name="donate_text2">I\'m really appreciated for your donation!</string>
    <string name="donate_1000_btn">$1 Donate!</string>
    <string name="donate_taxinfo">*TAX is not included*</string>
    <string name="btn_back">Back</string>
    <string name="recyresi_gender">Gend.</string>
    <string name="recyresi_birth">Birth.</string>
    <string name="recyresi_coffee">Coff.</string>
    <string name="recyresi_personality">Pers.</string>
    <string name="islandedit_title">Edit My ACNH</string>
    <string name="islandedit_islandinfo_title">Edit Island Info</string>
    <string name="islandedit_islandinfo_hint">Please insert island name</string>
    <string name="islandedit_islandaddress_hint">Please insert island address</string>
    <string name="islandedit_islandfruit_hint">Please insert island fruit</string>
    <string name="islandedit_islandresi_hint">Please insert player name</string>
    <string name="islandedit_resident_title">Edit Residents\' Info</string>
    <string name="islandedit_resident_list">List</string>
    <string name="islandedit_resident_selected">Selected</string>
    <string name="islandedit_resident_text1">Click to add.</string>
    <string name="islandedit_resident_text2">Long click to remove.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Confirm</string>
    <string name="info_updates_history">Updates History</string>
    <string name="info_htu">How To Use?</string>
    <string name="info_htu_1">Click to edit My ACNH!</string>
    <string name="info_htu_2">Long click to change island image!</string>
    <string name="info_htu_3">Click to choose extra function!</string>
    <string name="info_htu_end">Move to Screenshot button, Turnip value analysis etc. function are ready! Try it yourself!</string>
    <string name="main_elseevent_btn">Anything else?</string>
    <string name="n_hemisphere">N. Hemisphere</string>
    <string name="s_hemisphere">S. Hemisphere</string>
    <string name="action_island">Change Island</string>
    <string name="change_island_1">Click the button to change island!</string>
    <string name="changeIsland_btn1">Create new island 1</string>
    <string name="changeIsland_btn2">Create new island 2</string>
    <string name="changeIsland_btn3">Create new island 3</string>
    <string name="alligator">Alligator</string>
    <string name="anteater">Anteater</string>
    <string name="bear">Bear</string>
    <string name="bird">Bird</string>
    <string name="cat">Cat</string>
    <string name="chicken">Chicken</string>
    <string name="cow">Cow</string>
    <string name="cub">Cub</string>
    <string name="deer">Deer</string>
    <string name="dog">Dog</string>
    <string name="duck">Duck</string>
    <string name="eagle">Eagle</string>
    <string name="elephant">Elephant</string>
    <string name="frog">Frog</string>
    <string name="goat">Goat</string>
    <string name="gorilla">Gorilla</string>
    <string name="hamster">Hamster</string>
    <string name="hippo">Hippo</string>
    <string name="horse">Horse</string>
    <string name="kangaroo">Kangaroo</string>
    <string name="koala">Koala</string>
    <string name="lion">Lion</string>
    <string name="monkey">Monkey</string>
    <string name="mouse">Mouse</string>
    <string name="octopus">Octopus</string>
    <string name="ostrich">Ostrich</string>
    <string name="penguin">Penguin</string>
    <string name="pig">Pig</string>
    <string name="rabbit">Rabbit</string>
    <string name="rhino">Rhino</string>
    <string name="sheep">Sheep</string>
    <string name="squirrel">Squirrel</string>
    <string name="tiger">Tiger</string>
    <string name="wolf">Wolf</string>
    <string name="main_turniphelper_title">Turnip Helper</string>
    <string name="main_turniphelper_btn1">Value Analysis</string>
    <string name="main_turniphelper_btn2">Reset Values</string>
    <string name="main_turniphelper_btn3">Apply n Save</string>
    <string name="turnip_sun">Origin. Price</string>
    <string name="turnip_mon_am">Mon AM</string>
    <string name="turnip_mon_pm">Mon PM</string>
    <string name="turnip_tue_am">Tue AM</string>
    <string name="turnip_tue_pm">Tue PM</string>
    <string name="turnip_wed_am">Wed AM</string>
    <string name="turnip_wed_pm">Wed PM</string>
    <string name="turnip_thu_am">Thu AM</string>
    <string name="turnip_thu_pm">Thu PM</string>
    <string name="turnip_fri_am">Fri AM</string>
    <string name="turnip_fri_pm">Fri PM</string>
    <string name="turnip_sat_am">Sat AM</string>
    <string name="turnip_sat_pm">Sat PM</string>
    <string name="click_to_input">Click!</string>
    <string name="turnip_analysis_title">Turnip Value Pattern Analysis Table</string>
    <string name="turnip_analysis_text1">The reliability of the predicted turnip value is 85%, pattern type is 99%.\nPlease refer to the NLNN YT video for the analysis method of analysis table.</string>
    <string name="pattern_type">Pattern\nType</string>
    <string name="turnip_analysis_sun">Orig.\nPrice</string>
    <string name="turnip_analysis_mon_am">Mon\nAM</string>
    <string name="turnip_analysis_mon_pm">Mon\nPM</string>
    <string name="turnip_analysis_tue_am">Tue\nAM</string>
    <string name="turnip_analysis_tue_pm">Tue\nPM</string>
    <string name="turnip_analysis_wed_am">Wed\nAM</string>
    <string name="turnip_analysis_wed_pm">Wed\nPM</string>
    <string name="turnip_analysis_thu_am">Thu\nAM</string>
    <string name="turnip_analysis_thu_pm">Thu\nPM</string>
    <string name="turnip_analysis_fri_am">Fri\nAM</string>
    <string name="turnip_analysis_fri_pm">Fri\nPM</string>
    <string name="turnip_analysis_sat_am">Sat\nAM</string>
    <string name="turnip_analysis_sat_pm">Sat\nPM</string>
    <string name="turnip_analysis_input">[Input]</string>
    <string name="turnip_popup_title">Input Turnip Value</string>
    <string name="turnip_popup_3char">Up to 3 digits can be entered.</string>
</resources>
