<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 타이틀바 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/action_island"
            android:textSize="20dp"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:fontFamily="@font/cookierun_regular" />
    </LinearLayout>
    <!-- //end 타이틀바 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="40dp"
            android:text="@string/change_island_1"
            android:textColor="#000"
            android:textSize="18dp"
            android:fontFamily="@font/cookierun_regular"/>

        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnisland1"
                android:text="@string/changeIsland_btn1"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:fontFamily="@font/cookierun_regular"/>
        </LinearLayout>
        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnisland2"
                android:text="@string/changeIsland_btn2"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:fontFamily="@font/cookierun_regular"/>
        </LinearLayout>
        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"/>

        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnisland3"
                android:text="@string/changeIsland_btn3"
                android:textSize="14dp"
                android:textColor="@color/colorPrimaryDark"
                android:padding="10dp"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:fontFamily="@font/cookierun_regular"/>
        </LinearLayout>
        <View
            android:background="#66bdbdbd"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </LinearLayout>

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnIslandClose"
            android:text="@string/btn_back"
            android:textSize="15dp"
            android:textColor="#CB4245"
            android:padding="16dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:fontFamily="@font/cookierun_regular"/>
    </LinearLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>